--- a/index.html
+++ b/index.html
@@ -7,74 +7,8 @@
 </head>
 <body>
     <h1>
-        Welcome to Laundry Wallah / Laundry Mart 
+       Hello World
     </h1>
-    <div>
-        Welcome to Laundry Wallah / Laundry Mart, your one-stop solutions for all your laundry needs and services.Our dedicated team provides top-notch services, providing a hassale-free need efficient laundry experience. With a focus on quality and customer satisfaction, we take care of your garments as if they were our own.
-    </div>
-    <div>
-        <img width="500px" src="https://previews.123rf.com/images/lineartestpilot/lineartestpilot1603/lineartestpilot160311541/53364189-freehand-drawn-cartoon-washing-machine.jpg" />
-    </div>
-    <div>
-        <h4>Our Services</h4>
-        <ul>
-            <li>
-                Washing and Drying
-            </li>
-            <li>
-                Ironing and Folding
-            </li>
-            <li>Dry Cleaning</li>
-            <li>Stain Removal</li>
-            <li>Express Services</li>
-            <li>Special Garment Care</li>
-            <li>And more....</li>
-        </ul>
-    </div>
-    <div>
-        <h4>Price List</h4>
-        <table>
-            <tr>
-                <th>
-                    Service
-                </th>
-                <th>
-                    Price
-                </th>
-            </tr>
-            <tr>
-                <td>
-                    Washing and Drying
-                </td>
-                <td>
-                    $10.00
-                </td>
-            </tr>
-            <tr>
-                <td>
-                    Ironing and Folding
-                </td>
-                <td>
-                    $5.00
-                </td>
-            </tr>
-        </table>
-    </div>
-    <div>
-        <h4>
-            Book Now
-        </h4>
-        <div>
-            Name:<input type="text" />
-        </div>
-        <div>
-            Email:<input type="email" />
-
-        </div>
-    </div>
-    <div>
-        Contact us at: info@laundry.com
-    </div>
     
 </body>
 </html>
