--- a/index.html
+++ b/index.html
@@ -5,38 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Task 1</title>
     <link rel="stylesheet" href="style.css">
+    <script src="./script.js"></script>
 </head>
 <body>
-   <h1 class="head">Hello World</h1>
-   <h2 class="head" id="bglime">This is Heading with head as class and bglime as id.</h2>
-    <h4 class="head">This is third heading with class head</h4>
-    <p>This is the para text1</p>
-    <p id="para">This is the para text2</p>
-    <p>This is the <span style="color: black;font-size: 32px;">paragraph</span> text3</p>
-    <ul>
-        <li>
-            Click <a href="www.upskillmafia.com">here</a> to go to Upskillmafia
-        </li>
-        <li>
-            Click <a href="www.google.com">here</a> to go to Google
-        </li>
-    </ul>
-    <ol>
-        <li>
-            This is li without any id or class
-        </li>
-        <li>
-            This is li without any id or class
-        </li>
-        <li>
-            This is li without any id or class
-        </li>
-        <li>
-            This is li without any id or class
-        </li>
-        <li>
-            This is li without any id or class
-        </li>
-    </ol>
+  JS
 </body>
 </html>
